fixing multiple scrollbar issue

--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -5,16 +5,13 @@ html, body {
 
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-weight: 300;
-
-	overflow-x: hidden;
-	overflow-y: scroll;
+	overflow-y: auto;
 	-webkit-overflow-scrolling: touch;
 }
 
 .for-scrolling {
 	height: 100%;
-	overflow-y: scroll;
-	overflow-x: hidden;
+	overflow-x: auto;
 	-webkit-overflow-scrolling: touch;
 }
 
